objects/gvp__Settings_Placement__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings for the Placement object used on the Authorization Page.  Each record represents a new placement object available on the Authorization page</description>
    <fields>
        <fullName>gvp__Button_Label__c</fullName>
        <label>Button Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Display_Fields__c</fullName>
        <defaultValue>&quot;gvp__Placement_Name__c,gvp__Placement_Price__c,gvp__Details__c&quot;</defaultValue>
        <inlineHelpText>Enter comma separated list of Placement fields ex &quot;Name, gvp__Menu_Name__c, gvp__Menu_Price__c&quot;</inlineHelpText>
        <label>Display Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>gvp__Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Premise_Type__c</fullName>
        <defaultValue>&quot;On_premise_Chain_HQ&quot;</defaultValue>
        <description>Should this Placement setting be available for On or Off premise chain authorizations</description>
        <inlineHelpText>Enter &quot;On_premise_Chain_HQ&quot; or &quot;Off_premise_Chain_HQ&quot;</inlineHelpText>
        <label>Premise Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Record_Type__c</fullName>
        <inlineHelpText>Enter the &quot;Placement&quot; Record Type such as &quot;Backbar&quot;</inlineHelpText>
        <label>Record Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>gvp__Required_Fields__c</fullName>
        <defaultValue>&quot;gvp__Placement_Name__c,gvp__Placement_Price__c&quot;</defaultValue>
        <inlineHelpText>Also comma separated list</inlineHelpText>
        <label>Required Fields</label>
        <type>TextArea</type>
    </fields>
    <label>Placement Settings</label>
</CustomObject>